# c-glad-glfw-cmake-template

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
